<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:id="@+id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="#FFFFFF"><HorizontalScrollView android:id="@+id/HorizontalScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#FFFFFF"><TableLayout android:id="@+id/TableLayout01" android:background="#FFFFFF" android:layout_height="fill_parent" android:layout_width="fill_parent"><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow03" android:gravity="center_horizontal" android:layout_gravity="center_horizontal"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/textcolor" android:text="@string/About" android:id="@+id/TextView_About" android:textSize="25sp" android:layout_gravity="center_horizontal" android:gravity="center_horizontal" android:textStyle="bold"></TextView>
</TableRow><TableRow android:layout_height="wrap_content" android:id="@+id/TableRow_Line" android:layout_width="fill_parent" android:background="#FF4A00"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/textcolor" android:id="@+id/TextView_Line" android:textSize="5dip"></TextView>
</TableRow><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow03"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TextView_Aim" android:text="@string/Aim" android:textColor="@color/textcolor"></TextView>
</TableRow><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow03"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/AimInfo" android:id="@+id/TextView_AimInfo" android:textColor="@color/textcolor" android:width="400sp"></TextView>
</TableRow><TableRow android:layout_height="wrap_content" android:id="@+id/TableRow_Line" android:layout_width="fill_parent" android:background="#0021A5"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/textcolor" android:id="@+id/TextView_Line" android:textSize="1dip"></TextView>
</TableRow><TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Copyright" android:gravity="left" android:id="@+id/TextView_Copyright" android:textColor="@color/textcolor"></TextView>
</TableRow><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow02"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/CopyrightInfo" android:id="@+id/TextView_copyInfo" android:textColor="@color/textcolor" android:width="400sp"></TextView>
</TableRow><TableRow android:layout_height="wrap_content" android:id="@+id/TableRow_Line" android:layout_width="fill_parent" android:background="#0021A5"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/textcolor" android:id="@+id/TextView_Line" android:textSize="1dip"></TextView>
</TableRow>
<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow03"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TextView_Credits" android:text="@string/Credits" android:textColor="@color/textcolor"></TextView>
</TableRow><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow03"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/CreditsInfo" android:id="@+id/TextView_CreditsInfo" android:textColor="@color/textcolor" android:width="400sp"></TextView>
</TableRow><TableRow android:layout_height="wrap_content" android:id="@+id/TableRow_Line" android:layout_width="fill_parent" android:background="#0021A5"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/textcolor" android:id="@+id/TextView_Line" android:textSize="1dip"></TextView>
</TableRow><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow03"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/textcolor" android:id="@+id/TextView_Version" android:text="@string/Version"></TextView>
</TableRow><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow03"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/textcolor" android:id="@+id/TextView_VersionInfo" android:text="@string/VersionInfo"></TextView>
</TableRow><TableRow android:layout_height="wrap_content" android:id="@+id/TableRow_Line" android:layout_width="fill_parent" android:background="#0021A5"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/textcolor" android:id="@+id/TextView_Line" android:textSize="1dip"></TextView>
</TableRow></TableLayout>
</HorizontalScrollView>
</ScrollView>
