<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:layout_height="fill_parent" android:scrollbars="vertical" android:background="#FFFFFF">











<ScrollView android:id="@+id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent"><HorizontalScrollView android:id="@+id/HorizontalScrollView01" android:layout_height="fill_parent" android:layout_width="fill_parent"><RelativeLayout android:id="@+id/RelativeLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content"><ImageView android:id="@+id/ImageView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/bktree1"></ImageView><TableLayout android:id="@+id/TableLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" android:gravity="center_horizontal" android:layout_gravity="right" android:layout_alignRight="@+id/ImageView01"><TableRow android:id="@+id/TableRow07" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center_horizontal"><TextView android:layout_height="wrap_content" android:id="@+id/TextView_BinomialName" android:textSize="20sp" android:layout_width="match_parent" android:gravity="right" android:textColor="@color/textcolor"></TextView></TableRow><TableRow android:id="@+id/TableRow08" android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_width="fill_parent"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TextView_CommonName" android:gravity="center_horizontal" android:textColor="@color/textcolor"></TextView></TableRow><TableRow android:id="@+id/TableRow09" android:layout_height="wrap_content" android:layout_width="fill_parent" android:background="#FF4A00" android:layout_margin="5sp"><TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:textSize="5dip" android:layout_width="fill_parent" android:width="100sp"></TextView>
</TableRow><TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:gravity="center_horizontal" android:layout_width="fill_parent"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/Button_TreeInfo" android:text="@string/TreeInfo" android:layout_margin="1sp" android:textColor="@color/textcolor" android:textSize="20sp" android:textStyle="bold" android:background="#FFFFFF"></Button>
</TableRow><TableRow android:id="@+id/TableRow02" android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_width="fill_parent"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Root" android:id="@+id/Button_Root" android:layout_margin="1sp" android:textColor="@color/textcolor" android:textSize="20sp" android:textStyle="bold" android:background="#FFFFFF"></Button>

</TableRow><TableRow android:id="@+id/TableRow03" android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_width="fill_parent"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/Button_Stem" android:text="@string/Stem" android:layout_margin="1sp" android:textColor="@color/textcolor" android:textSize="20sp" android:textStyle="bold" android:background="#FFFFFF"></Button>

</TableRow>
<TableRow android:id="@+id/TableRow04" android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_width="fill_parent"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Leaves" android:id="@+id/Button_Leaves" android:layout_margin="1sp" android:textColor="@color/textcolor" android:textSize="20sp" android:textStyle="bold" android:background="#FFFFFF"></Button>
</TableRow>
<TableRow android:id="@+id/TableRow05" android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_width="fill_parent"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/Button_Flowers" android:text="@string/Flowers" android:layout_margin="1sp" android:textColor="@color/textcolor" android:textSize="20sp" android:textStyle="bold" android:background="#FFFFFF"></Button>
</TableRow>
<TableRow android:id="@+id/TableRow06" android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_width="fill_parent"><Button android:layout_height="wrap_content" android:text="@string/Fruits" android:id="@+id/Button_Fruits" android:layout_margin="1sp" android:textColor="@color/textcolor" android:textSize="20sp" android:textStyle="bold" android:background="#FFFFFF" android:layout_width="fill_parent"></Button>
</TableRow>





</TableLayout>
</RelativeLayout>
</HorizontalScrollView>
</ScrollView>





</LinearLayout>
